fixed scrollbar position

--- a/src/components/cart-sidebar/cart-sidebar.scss
+++ b/src/components/cart-sidebar/cart-sidebar.scss
@@ -26,8 +26,8 @@
 
 .nav-white {
   background: #f2f2f2;
-  min-width: 300px;
-  max-width: 400px;
+  min-width: 450px;
+  max-width: 450px;
   box-shadow: 0 2px 10px rgba(54, 54, 54, 0.15);
   flex: 1 1 auto;
   z-index: 2;
@@ -36,8 +36,8 @@
   .cart-header {
     display: flex;
     position: relative;
-    max-height: 80px;
-    min-height: 60px;
+    max-height: 100px;
+    min-height: 80px;
     padding-left: 30px;
     padding-right: 30px;
     justify-content: center;
@@ -48,6 +48,14 @@
   .cart-main {
     flex: 1 1 auto;
     overflow: auto;
+
+    .cart-empty {
+      position: absolute;
+      width: 100%;
+      top: 50%; 
+      text-align: center;
+     
+    }
     .cart-content {
       overflow: auto;
       position: relative;
@@ -79,7 +87,8 @@
     position: absolute;
     padding: 20px 30px;
     width: 100%;
-    height: 80px;
+    max-height: 100px;
+    min-height: 80px;
     bottom: 0px;
     box-shadow: 0 -1px #d2d2d2;
 
@@ -88,7 +97,7 @@
 }
 
 .cart-title {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .close-btn {
