--- a/src/components/featured-item/featured-item.scss
+++ b/src/components/featured-item/featured-item.scss
@@ -12,7 +12,7 @@
     @media screen and (min-width:700px)  {
         width: 50%;
     }
-    @media screen and (min-width:1000px) {
+    @media screen and (min-width:1100px) {
         width: 25%;
     }
   
