--- a/src/components/footer/footer-section.scss
+++ b/src/components/footer/footer-section.scss
@@ -34,12 +34,12 @@
         margin-bottom: 50px;
         padding-left: 40px;
         padding-right: 40px;
-        flex: 0 1 auto;
+        flex: 1 1 50%;
       }
 
       .footer-text {
         margin-top: 0;
-        flex-basis: 460px;
+   
 
         .footer-content {
           font-size: 14px;
