--- a/src/components/slideshow/slideshow.scss
+++ b/src/components/slideshow/slideshow.scss
@@ -1,7 +1,7 @@
 .slideshow-wrapper {
+  position: relative;
   display: flex;
   height: 88vh;
-  // max-width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
@@ -18,15 +18,15 @@
     margin: 0;
 
     .dot {
+      background-color: rgba(0, 0, 0, 0.1);  
       cursor: pointer;
       position: relative;
       display: inline-block;
       border-radius: 50%;
-      width: 10px;
-      height: 10px;
+      width: 15px;
+      height: 15px;
       margin: 0 7px;
-      border: 1px solid #747070;
-      border-width: 2px;
+      border: 3px solid #1c1b1b;
       transition: color 0.2s ease-in-out, background 0.2s ease-in-out;
     }
 
@@ -50,7 +50,7 @@
     cursor: pointer;
     position: absolute;
     left: calc(50% - 25px);
-    bottom: 10px;
+    bottom: -25px;
     width: 50px;
     height: 50px;
     border: none;
@@ -65,7 +65,7 @@
     .scrollbtn-arrow{
       color:#a09999;
       height: 32px;
-      width: 32px;
+      width: 24px;
 
     }
 
