--- a/src/pages/page-overay/page-overay.scss
+++ b/src/pages/page-overay/page-overay.scss
@@ -6,7 +6,7 @@
     width: 100vw;
     z-index: 2;
     visibility: hidden;
-    opacity: 1;
+    opacity: 0;
     background: #363636;
     -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
